Fixed an overflowing bug in the phone background

--- a/style.css
+++ b/style.css
@@ -260,7 +260,8 @@ main {
     display: flex;
     flex-direction: column;
     height: 100%;
-    overflow-Y: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
   }
   #text {
     width: 100vw;
